src/objects/XO_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Personal_Profile_Completion_Date__c</fullName>
        <description>Input date of document signing</description>
        <label>Personal Profile Completion Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sexual_Harassment_Document_Signed__c</fullName>
        <description>Input date of document signing</description>
        <label>Sexual Harassment Document Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Asset_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XO Asset Tracking</label>
        <referenceTo>Asset_Tracking__c</referenceTo>
        <relationshipLabel>XO Documents</relationshipLabel>
        <relationshipName>XO_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XO_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XO Employee</label>
        <referenceTo>XO_Employee__c</referenceTo>
        <relationshipLabel>XO Documents</relationshipLabel>
        <relationshipName>XO_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>XO Documents</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>XO_Employee_Documents_Inventory</fullName>
        <columns>Personal_Profile_Completion_Date__c</columns>
        <columns>Sexual_Harassment_Document_Signed__c</columns>
        <filterScope>Everything</filterScope>
        <label>XO Employee Documents Inventory</label>
        <sharedTo>
            <role>XO_Executive_Office</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>XO Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XO Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>